--- a/DAY20.html
+++ b/DAY20.html
@@ -158,10 +158,10 @@
 
             <div class="footer-box">
                 <h3>Contact</h3>
-               <p>United States</p>
-               <p>Canada</p>
-               <p> Jaban</p>
-               <p>Germany</p>
+               <p>Andhra Pradesh</p>
+               <p>Telangana</p>
+               <p>tamilNadu</p>
+               <p>Karnataka</p>
             </div>
         </div>
     </section>
