--- a/DAY20.html
+++ b/DAY20.html
@@ -29,7 +29,7 @@
  
     <section class="home" id="home">
         <div class="home-text">
-            <h1><i><span>We have  </span> Everthing<br>your car Need</i></h1>
+            <h1><i><span>We have  </span> Different<br>Models of cars </i></h1>
             <br><br>
             <a href="#" class="btn">Discover Now</a>
         </div>
